--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB URL=mongodb+srv://Praveenaws:<RK3xDvMANtRBAp57>@mern.ximp82z.mongodb.net/mern?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Praveenaws:<RK3xDvMANtRBAp57>@mern.ximp82z.mongodb.net/mern?retryWrites=true&w=majority
